     this will do. (#3823, #9251, #7553, #6754, #5423, #2958, #2079, #1947, #1131, #722)
   - In 'Demo->Property Editor' demonstrate a way to perform tree clipping by fast-forwarding
     through non-visible chunks. (#3823, #9251, #6990, #6042)
     Using SetNextItemStorageID() + TreeNodeGetOpen() makes this notably easier than
     it was prior to 1.91.
- Style: border sizes are now scaled (and rounded) by ScaleAllSizes().
- Clipper:
  - Clear `DisplayStart`/`DisplayEnd` fields when `Step()` returns false.
  - Added `UserIndex` helper storage. This is solely a convenience for cases where
    you may want to carry an index around.
- Examples:
  - Emscripten: added `tabindex=-1` to canvas in our shell_minimal.htm. Without it,
    the canvas was not focusable in the DOM, which in turn make some backends
    (e.g. pongasoft/emscripten-glfw) not receive focus loss events. (#9259) [@pthom]
  - WGPU: fixed undefined behaviors in example code for requesting adapter
    and device. (#9246, #9256) [@r-lyeh]


-----------------------------------------------------------------------
 VERSION 1.92.6 (2026-02-17)
-----------------------------------------------------------------------

Decorated log and release notes: https://github.com/ocornut/imgui/releases/tag/v1.92.6

Breaking Changes:

- Fonts:
  - `AddFontDefault()` now automatically selects an embedded font between:
    - `AddFontDefaultBitmap()`: classic pixel-clean font. Recommended at Size 13px with no scaling.
    - `AddFontDefaultVector()`: new scalable font. Recommended at any higher size.
    - The default selection is based on (style.FontSizeBase * FontScaleMain * FontScaleDpi)
      reaching a small threshold, but old codebases may not set any of them properly.
      As as a result, it is likely that old codebase may still default to AddFontDefaultBitmap().
    - Prefer explicitly calling either of them based on your own logic!
      You can call `AddFontDefaultBitmap()` to ensure legacy behavior.